[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemy/Spider/Model.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy/Spider/Spider.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.21991, 0.627552, 1.54232 )

[sub_resource type="SphereShape" id=2]
radius = 4.54429

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.0117647, 0.752941, 0.215686, 1 )

[sub_resource type="SphereMesh" id=4]
material = SubResource( 3 )
radius = 0.03
height = 0.03
radial_segments = 4
rings = 2

[node name="Spider" type="KinematicBody"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
collision_layer = 8
collision_mask = 15
script = ExtResource( 2 )

[node name="Model" parent="." instance=ExtResource( 1 )]

[node name="HitBox" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.593645, -0.193017 )
shape = SubResource( 1 )

[node name="HitTimer" type="Timer" parent="."]

[node name="AttackRange" type="Area" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="AttackRange"]
shape = SubResource( 2 )

[node name="BloodParticles" type="CPUParticles" parent="."]
transform = Transform( 1, -5.68435e-14, -5.68434e-14, 5.68434e-14, 1, -6.77626e-21, 5.68434e-14, -1.35525e-20, 1, 7.03943e-07, 2.16039, -4.10675e-19 )
emitting = false
amount = 50
mesh = SubResource( 4 )
gravity = Vector3( 0, 4, 0 )
initial_velocity = 3.0
initial_velocity_random = 1.0
[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
